<resources>
    <string name="app_name">Hangman</string>
    <string name="e">E</string>
    <string name="hangman">Hangman</string>
    <string name="game">GAME</string>
    <string name="attempts_left">Attempts left</string>
    <string name="hangman_image">Hangman Image</string>
    <string name="hangmanN">Hangman</string>
    <string name="gameN">GAME</string>
    <string name="play">PLAY</string>
    <string name="main_background">Main Background</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="z">Z</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="menu">MENU</string>
</resources>