<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hangman"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/hangman"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/hangman_image"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/attempts_left"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/attemptsLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/gameProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="_ _ _ _"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lettersLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/a"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/b"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/c"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/d"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/e"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/f"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/g"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/h"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/i"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/j"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/j"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/k"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/l"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/m"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/n"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/o"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/p"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/q"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/r"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/s"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/t"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/u"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/v"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/w"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/x"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/y"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:onClick="useLetter"
                android:text="@string/z"
                android:textColor="@color/white"
                app:strokeColor="@color/baby_blue"
                app:strokeWidth="2dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/finalBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:visibility="gone">

        <Button
            android:id="@+id/playAgain"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/dark_blue"
            android:onClick="wordBankScreen"
            android:text="@string/play_again"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/goToMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/dark_blue"
            android:onClick="menuScreen"
            android:text="@string/menu"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>