<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/hangmanN"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gameN"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="80dp"
        android:padding="30dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/buttonPlay"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00FFFFFF"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="nextScreen"
                android:text="@string/play"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:iconPadding="15dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:alpha="0.5"
        android:background="@color/white"
        android:contentDescription="@string/main_background"
        android:scaleType="fitEnd"
        app:srcCompat="@drawable/background" />


</LinearLayout>