<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    tools:context=".WordBankActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hangman"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="CHOOSE A TOPIC"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/animalsBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/dark_blue"
            android:onClick="animalsBank"
            android:text="ANIMALS"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/natureBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/dark_blue"
            android:onClick="natureBank"
            android:text="NATURE"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/objectsBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/dark_blue"
            android:onClick="objectsBank"
            android:text="OBJECTS"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/randomBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/dark_blue"
            android:onClick="randomBank"
            android:text="RANDOM"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:alpha="0.5"
        android:background="@color/white"
        android:contentDescription="@string/main_background"
        android:scaleType="fitEnd"
        app:srcCompat="@drawable/background2" />


</LinearLayout>